CPP/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NUMBER
    PACKED

Grammar

Rule 0     S' -> program
Rule 1     program -> program_head routine DOT
Rule 2     program_head -> PROGRAM NAME SEMI
Rule 3     routine -> routine_head routine_body
Rule 4     sub_routine -> routine_head routine_body
Rule 5     routine_head -> label_part const_part type_part var_part routine_part
Rule 6     label_part -> empty
Rule 7     const_part -> CONST const_expr_list
Rule 8     const_part -> empty
Rule 9     const_expr_list -> const_expr_list const_expr
Rule 10    const_expr_list -> const_expr
Rule 11    const_expr -> NAME EQUAL const_value SEMI
Rule 12    const_value -> INTEGER
Rule 13    const_value -> REAL
Rule 14    const_value -> CHAR
Rule 15    const_value -> STRING
Rule 16    const_value -> SYS_CON
Rule 17    const_value -> true
Rule 18    const_value -> false
Rule 19    type_part -> TYPE type_decl_list
Rule 20    type_part -> empty
Rule 21    type_decl_list -> type_decl_list type_definition
Rule 22    type_decl_list -> type_definition
Rule 23    type_definition -> NAME EQUAL type_decl SEMI
Rule 24    type_decl -> simple_type_decl
Rule 25    type_decl -> array_type_decl
Rule 26    type_decl -> record_type_decl
Rule 27    simple_type_decl -> SYS_TYPE
Rule 28    simple_type_decl -> NAME
Rule 29    simple_type_decl -> LP name_list RP
Rule 30    simple_type_decl -> const_value DOTDOT const_value
Rule 31    array_type_decl -> ARRAY LB INTEGER DOTDOT INTEGER RB OF type_decl
Rule 32    record_type_decl -> RECORD field_decl_list END
Rule 33    field_decl_list -> field_decl_list field_decl
Rule 34    field_decl_list -> field_decl
Rule 35    field_decl -> name_list COLON type_decl SEMI
Rule 36    name_list -> name_list COMMA NAME
Rule 37    name_list -> NAME
Rule 38    var_part -> VAR var_decl_list
Rule 39    var_part -> empty
Rule 40    var_decl_list -> var_decl_list var_decl
Rule 41    var_decl_list -> var_decl
Rule 42    var_decl -> name_list COLON type_decl SEMI
Rule 43    routine_part -> routine_part function_decl
Rule 44    routine_part -> routine_part procedure_decl
Rule 45    routine_part -> function_decl
Rule 46    routine_part -> procedure_decl
Rule 47    routine_part -> empty
Rule 48    function_decl -> function_head SEMI sub_routine SEMI
Rule 49    function_head -> FUNCTION function_name parameters COLON simple_type_decl
Rule 50    function_name -> NAME
Rule 51    procedure_decl -> procedure_head SEMI sub_routine SEMI
Rule 52    procedure_head -> PROCEDURE procedure_name parameters
Rule 53    procedure_name -> NAME
Rule 54    parameters -> LP para_decl_list RP
Rule 55    parameters -> empty
Rule 56    para_decl_list -> para_decl_list SEMI para_type_list
Rule 57    para_decl_list -> para_type_list
Rule 58    para_type_list -> var_para_list COLON simple_type_decl
Rule 59    para_type_list -> val_para_list COLON simple_type_decl
Rule 60    var_para_list -> VAR name_list
Rule 61    val_para_list -> name_list
Rule 62    routine_body -> compound_stmt
Rule 63    routine_body -> empty
Rule 64    compound_stmt -> BEGIN stmt_list END
Rule 65    stmt_list -> stmt_list stmt SEMI
Rule 66    stmt_list -> empty
Rule 67    stmt -> INTEGER COLON non_label_stmt
Rule 68    stmt -> non_label_stmt
Rule 69    non_label_stmt -> assign_stmt
Rule 70    non_label_stmt -> proc_stmt
Rule 71    non_label_stmt -> compound_stmt
Rule 72    non_label_stmt -> if_stmt
Rule 73    non_label_stmt -> repeat_stmt
Rule 74    non_label_stmt -> while_stmt
Rule 75    non_label_stmt -> for_stmt
Rule 76    non_label_stmt -> case_stmt
Rule 77    non_label_stmt -> goto_stmt
Rule 78    assign_stmt -> NAME ASSIGN expression
Rule 79    assign_stmt -> NAME LB expression RB ASSIGN expression
Rule 80    assign_stmt -> NAME DOT NAME ASSIGN expression
Rule 81    proc_stmt -> NAME
Rule 82    proc_stmt -> NAME LP args_list RP
Rule 83    proc_stmt -> SYS_PROC
Rule 84    proc_stmt -> SYS_PROC LP expression_list RP
Rule 85    proc_stmt -> READ LP factor RP
Rule 86    if_stmt -> IF expression THEN stmt else_clause
Rule 87    else_clause -> ELSE stmt
Rule 88    else_clause -> empty
Rule 89    repeat_stmt -> REPEAT stmt_list UNTIL expression
Rule 90    while_stmt -> WHILE expression DO stmt
Rule 91    for_stmt -> FOR NAME ASSIGN expression direction expression DO stmt
Rule 92    direction -> TO
Rule 93    direction -> DOWNTO
Rule 94    case_stmt -> CASE expression OF case_expr_list END
Rule 95    case_expr_list -> case_expr_list case_expr
Rule 96    case_expr_list -> case_expr
Rule 97    case_expr -> const_value COLON stmt SEMI
Rule 98    case_expr -> ID COLON stmt SEMI
Rule 99    goto_stmt -> GOTO INTEGER
Rule 100   expression_list -> expression_list COMMA expression
Rule 101   expression_list -> expression
Rule 102   expression -> expression GE expr
Rule 103   expression -> expression GT expr
Rule 104   expression -> expression LE expr
Rule 105   expression -> expression LT expr
Rule 106   expression -> expression EQUAL expr
Rule 107   expression -> expression UNEQUAL expr
Rule 108   expression -> expr
Rule 109   expr -> expr PLUS term
Rule 110   expr -> expr MINUS term
Rule 111   expr -> expr OR term
Rule 112   expr -> term
Rule 113   term -> term MUL factor
Rule 114   term -> term DIV factor
Rule 115   term -> term MOD factor
Rule 116   term -> term AND factor
Rule 117   term -> factor
Rule 118   factor -> SYS_FUNCT
Rule 119   factor -> SYS_FUNCT LP args_list RP
Rule 120   factor -> NAME LP args_list RP
Rule 121   factor -> NAME
Rule 122   factor -> const_value
Rule 123   factor -> LP expression RP
Rule 124   factor -> NOT factor
Rule 125   factor -> MINUS factor
Rule 126   factor -> NAME LB expression RB
Rule 127   factor -> NAME DOT NAME
Rule 128   args_list -> args_list COMMA expression
Rule 129   args_list -> expression
Rule 130   empty -> <empty>

Terminals, with rules where they appear

AND                  : 116
ARRAY                : 31
ASSIGN               : 78 79 80 91
BEGIN                : 64
CASE                 : 94
CHAR                 : 14
COLON                : 35 42 49 58 59 67 97 98
COMMA                : 36 100 128
CONST                : 7
DIV                  : 114
DO                   : 90 91
DOT                  : 1 80 127
DOTDOT               : 30 31
DOWNTO               : 93
ELSE                 : 87
END                  : 32 64 94
EQUAL                : 11 23 106
FOR                  : 91
FUNCTION             : 49
GE                   : 102
GOTO                 : 99
GT                   : 103
ID                   : 98
IF                   : 86
INTEGER              : 12 31 31 67 99
LB                   : 31 79 126
LE                   : 104
LP                   : 29 54 82 84 85 119 120 123
LT                   : 105
MINUS                : 110 125
MOD                  : 115
MUL                  : 113
NAME                 : 2 11 23 28 36 37 50 53 78 79 80 80 81 82 91 120 121 126 127 127
NOT                  : 124
NUMBER               : 
OF                   : 31 94
OR                   : 111
PACKED               : 
PLUS                 : 109
PROCEDURE            : 52
PROGRAM              : 2
RB                   : 31 79 126
READ                 : 85
REAL                 : 13
RECORD               : 32
REPEAT               : 89
RP                   : 29 54 82 84 85 119 120 123
SEMI                 : 2 11 23 35 42 48 48 51 51 56 65 97 98
STRING               : 15
SYS_CON              : 16
SYS_FUNCT            : 118 119
SYS_PROC             : 83 84
SYS_TYPE             : 27
THEN                 : 86
TO                   : 92
TYPE                 : 19
UNEQUAL              : 107
UNTIL                : 89
VAR                  : 38 60
WHILE                : 90
error                : 
false                : 18
true                 : 17

Nonterminals, with rules where they appear

args_list            : 82 119 120 128
array_type_decl      : 25
assign_stmt          : 69
case_expr            : 95 96
case_expr_list       : 94 95
case_stmt            : 76
compound_stmt        : 62 71
const_expr           : 9 10
const_expr_list      : 7 9
const_part           : 5
const_value          : 11 30 30 97 122
direction            : 91
else_clause          : 86
empty                : 6 8 20 39 47 55 63 66 88
expr                 : 102 103 104 105 106 107 108 109 110 111
expression           : 78 79 79 80 86 89 90 91 91 94 100 101 102 103 104 105 106 107 123 126 128 129
expression_list      : 84 100
factor               : 85 113 114 115 116 117 124 125
field_decl           : 33 34
field_decl_list      : 32 33
for_stmt             : 75
function_decl        : 43 45
function_head        : 48
function_name        : 49
goto_stmt            : 77
if_stmt              : 72
label_part           : 5
name_list            : 29 35 36 42 60 61
non_label_stmt       : 67 68
para_decl_list       : 54 56
para_type_list       : 56 57
parameters           : 49 52
proc_stmt            : 70
procedure_decl       : 44 46
procedure_head       : 51
procedure_name       : 52
program              : 0
program_head         : 1
record_type_decl     : 26
repeat_stmt          : 73
routine              : 1
routine_body         : 3 4
routine_head         : 3 4
routine_part         : 5 43 44
simple_type_decl     : 24 49 58 59
stmt                 : 65 86 87 90 91 97 98
stmt_list            : 64 65 89
sub_routine          : 48 51
term                 : 109 110 111 112 113 114 115 116
type_decl            : 23 31 35 42
type_decl_list       : 19 21
type_definition      : 21 22
type_part            : 5
val_para_list        : 59
var_decl             : 40 41
var_decl_list        : 38 40
var_para_list        : 58
var_part             : 5
while_stmt           : 74

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_head routine DOT
    (2) program_head -> . PROGRAM NAME SEMI

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    program_head                   shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> program_head . routine DOT
    (3) routine -> . routine_head routine_body
    (5) routine_head -> . label_part const_part type_part var_part routine_part
    (6) label_part -> . empty
    (130) empty -> .

    CONST           reduce using rule 130 (empty -> .)
    TYPE            reduce using rule 130 (empty -> .)
    VAR             reduce using rule 130 (empty -> .)
    FUNCTION        reduce using rule 130 (empty -> .)
    PROCEDURE       reduce using rule 130 (empty -> .)
    BEGIN           reduce using rule 130 (empty -> .)
    DOT             reduce using rule 130 (empty -> .)

    routine                        shift and go to state 4
    routine_head                   shift and go to state 5
    label_part                     shift and go to state 6
    empty                          shift and go to state 7

state 3

    (2) program_head -> PROGRAM . NAME SEMI

    NAME            shift and go to state 8


state 4

    (1) program -> program_head routine . DOT

    DOT             shift and go to state 9


state 5

    (3) routine -> routine_head . routine_body
    (62) routine_body -> . compound_stmt
    (63) routine_body -> . empty
    (64) compound_stmt -> . BEGIN stmt_list END
    (130) empty -> .

    BEGIN           shift and go to state 13
    DOT             reduce using rule 130 (empty -> .)

    routine_body                   shift and go to state 10
    compound_stmt                  shift and go to state 11
    empty                          shift and go to state 12

state 6

    (5) routine_head -> label_part . const_part type_part var_part routine_part
    (7) const_part -> . CONST const_expr_list
    (8) const_part -> . empty
    (130) empty -> .

    CONST           shift and go to state 15
    TYPE            reduce using rule 130 (empty -> .)
    VAR             reduce using rule 130 (empty -> .)
    FUNCTION        reduce using rule 130 (empty -> .)
    PROCEDURE       reduce using rule 130 (empty -> .)
    BEGIN           reduce using rule 130 (empty -> .)
    DOT             reduce using rule 130 (empty -> .)
    SEMI            reduce using rule 130 (empty -> .)

    const_part                     shift and go to state 14
    empty                          shift and go to state 16

state 7

    (6) label_part -> empty .

    CONST           reduce using rule 6 (label_part -> empty .)
    TYPE            reduce using rule 6 (label_part -> empty .)
    VAR             reduce using rule 6 (label_part -> empty .)
    FUNCTION        reduce using rule 6 (label_part -> empty .)
    PROCEDURE       reduce using rule 6 (label_part -> empty .)
    BEGIN           reduce using rule 6 (label_part -> empty .)
    DOT             reduce using rule 6 (label_part -> empty .)
    SEMI            reduce using rule 6 (label_part -> empty .)


state 8

    (2) program_head -> PROGRAM NAME . SEMI

    SEMI            shift and go to state 17


state 9

    (1) program -> program_head routine DOT .

    $end            reduce using rule 1 (program -> program_head routine DOT .)


state 10

    (3) routine -> routine_head routine_body .

    DOT             reduce using rule 3 (routine -> routine_head routine_body .)


state 11

    (62) routine_body -> compound_stmt .

    DOT             reduce using rule 62 (routine_body -> compound_stmt .)
    SEMI            reduce using rule 62 (routine_body -> compound_stmt .)


state 12

    (63) routine_body -> empty .

    DOT             reduce using rule 63 (routine_body -> empty .)
    SEMI            reduce using rule 63 (routine_body -> empty .)


state 13

    (64) compound_stmt -> BEGIN . stmt_list END
    (65) stmt_list -> . stmt_list stmt SEMI
    (66) stmt_list -> . empty
    (130) empty -> .

    END             reduce using rule 130 (empty -> .)
    INTEGER         reduce using rule 130 (empty -> .)
    NAME            reduce using rule 130 (empty -> .)
    SYS_PROC        reduce using rule 130 (empty -> .)
    READ            reduce using rule 130 (empty -> .)
    BEGIN           reduce using rule 130 (empty -> .)
    IF              reduce using rule 130 (empty -> .)
    REPEAT          reduce using rule 130 (empty -> .)
    WHILE           reduce using rule 130 (empty -> .)
    FOR             reduce using rule 130 (empty -> .)
    CASE            reduce using rule 130 (empty -> .)
    GOTO            reduce using rule 130 (empty -> .)

    stmt_list                      shift and go to state 18
    empty                          shift and go to state 19

state 14

    (5) routine_head -> label_part const_part . type_part var_part routine_part
    (19) type_part -> . TYPE type_decl_list
    (20) type_part -> . empty
    (130) empty -> .

    TYPE            shift and go to state 21
    VAR             reduce using rule 130 (empty -> .)
    FUNCTION        reduce using rule 130 (empty -> .)
    PROCEDURE       reduce using rule 130 (empty -> .)
    BEGIN           reduce using rule 130 (empty -> .)
    DOT             reduce using rule 130 (empty -> .)
    SEMI            reduce using rule 130 (empty -> .)

    type_part                      shift and go to state 20
    empty                          shift and go to state 22

state 15

    (7) const_part -> CONST . const_expr_list
    (9) const_expr_list -> . const_expr_list const_expr
    (10) const_expr_list -> . const_expr
    (11) const_expr -> . NAME EQUAL const_value SEMI

    NAME            shift and go to state 25

    const_expr_list                shift and go to state 23
    const_expr                     shift and go to state 24

state 16

    (8) const_part -> empty .

    TYPE            reduce using rule 8 (const_part -> empty .)
    VAR             reduce using rule 8 (const_part -> empty .)
    FUNCTION        reduce using rule 8 (const_part -> empty .)
    PROCEDURE       reduce using rule 8 (const_part -> empty .)
    BEGIN           reduce using rule 8 (const_part -> empty .)
    DOT             reduce using rule 8 (const_part -> empty .)
    SEMI            reduce using rule 8 (const_part -> empty .)


state 17

    (2) program_head -> PROGRAM NAME SEMI .

    DOT             reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    BEGIN           reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    CONST           reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    TYPE            reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    VAR             reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    FUNCTION        reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    PROCEDURE       reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)


state 18

    (64) compound_stmt -> BEGIN stmt_list . END
    (65) stmt_list -> stmt_list . stmt SEMI
    (67) stmt -> . INTEGER COLON non_label_stmt
    (68) stmt -> . non_label_stmt
    (69) non_label_stmt -> . assign_stmt
    (70) non_label_stmt -> . proc_stmt
    (71) non_label_stmt -> . compound_stmt
    (72) non_label_stmt -> . if_stmt
    (73) non_label_stmt -> . repeat_stmt
    (74) non_label_stmt -> . while_stmt
    (75) non_label_stmt -> . for_stmt
    (76) non_label_stmt -> . case_stmt
    (77) non_label_stmt -> . goto_stmt
    (78) assign_stmt -> . NAME ASSIGN expression
    (79) assign_stmt -> . NAME LB expression RB ASSIGN expression
    (80) assign_stmt -> . NAME DOT NAME ASSIGN expression
    (81) proc_stmt -> . NAME
    (82) proc_stmt -> . NAME LP args_list RP
    (83) proc_stmt -> . SYS_PROC
    (84) proc_stmt -> . SYS_PROC LP expression_list RP
    (85) proc_stmt -> . READ LP factor RP
    (64) compound_stmt -> . BEGIN stmt_list END
    (86) if_stmt -> . IF expression THEN stmt else_clause
    (89) repeat_stmt -> . REPEAT stmt_list UNTIL expression
    (90) while_stmt -> . WHILE expression DO stmt
    (91) for_stmt -> . FOR NAME ASSIGN expression direction expression DO stmt
    (94) case_stmt -> . CASE expression OF case_expr_list END
    (99) goto_stmt -> . GOTO INTEGER

    END             shift and go to state 26
    INTEGER         shift and go to state 28
    NAME            shift and go to state 39
    SYS_PROC        shift and go to state 40
    READ            shift and go to state 41
    BEGIN           shift and go to state 13
    IF              shift and go to state 42
    REPEAT          shift and go to state 43
    WHILE           shift and go to state 44
    FOR             shift and go to state 45
    CASE            shift and go to state 46
    GOTO            shift and go to state 47

    stmt                           shift and go to state 27
    non_label_stmt                 shift and go to state 29
    assign_stmt                    shift and go to state 30
    proc_stmt                      shift and go to state 31
    compound_stmt                  shift and go to state 32
    if_stmt                        shift and go to state 33
    repeat_stmt                    shift and go to state 34
    while_stmt                     shift and go to state 35
    for_stmt                       shift and go to state 36
    case_stmt                      shift and go to state 37
    goto_stmt                      shift and go to state 38

state 19

    (66) stmt_list -> empty .

    END             reduce using rule 66 (stmt_list -> empty .)
    INTEGER         reduce using rule 66 (stmt_list -> empty .)
    NAME            reduce using rule 66 (stmt_list -> empty .)
    SYS_PROC        reduce using rule 66 (stmt_list -> empty .)
    READ            reduce using rule 66 (stmt_list -> empty .)
    BEGIN           reduce using rule 66 (stmt_list -> empty .)
    IF              reduce using rule 66 (stmt_list -> empty .)
    REPEAT          reduce using rule 66 (stmt_list -> empty .)
    WHILE           reduce using rule 66 (stmt_list -> empty .)
    FOR             reduce using rule 66 (stmt_list -> empty .)
    CASE            reduce using rule 66 (stmt_list -> empty .)
    GOTO            reduce using rule 66 (stmt_list -> empty .)
    UNTIL           reduce using rule 66 (stmt_list -> empty .)


state 20

    (5) routine_head -> label_part const_part type_part . var_part routine_part
    (38) var_part -> . VAR var_decl_list
    (39) var_part -> . empty
    (130) empty -> .

    VAR             shift and go to state 49
    FUNCTION        reduce using rule 130 (empty -> .)
    PROCEDURE       reduce using rule 130 (empty -> .)
    BEGIN           reduce using rule 130 (empty -> .)
    DOT             reduce using rule 130 (empty -> .)
    SEMI            reduce using rule 130 (empty -> .)

    var_part                       shift and go to state 48
    empty                          shift and go to state 50

state 21

    (19) type_part -> TYPE . type_decl_list
    (21) type_decl_list -> . type_decl_list type_definition
    (22) type_decl_list -> . type_definition
    (23) type_definition -> . NAME EQUAL type_decl SEMI

    NAME            shift and go to state 53

    type_decl_list                 shift and go to state 51
    type_definition                shift and go to state 52

state 22

    (20) type_part -> empty .

    VAR             reduce using rule 20 (type_part -> empty .)
    FUNCTION        reduce using rule 20 (type_part -> empty .)
    PROCEDURE       reduce using rule 20 (type_part -> empty .)
    BEGIN           reduce using rule 20 (type_part -> empty .)
    DOT             reduce using rule 20 (type_part -> empty .)
    SEMI            reduce using rule 20 (type_part -> empty .)


state 23

    (7) const_part -> CONST const_expr_list .
    (9) const_expr_list -> const_expr_list . const_expr
    (11) const_expr -> . NAME EQUAL const_value SEMI

    TYPE            reduce using rule 7 (const_part -> CONST const_expr_list .)
    VAR             reduce using rule 7 (const_part -> CONST const_expr_list .)
    FUNCTION        reduce using rule 7 (const_part -> CONST const_expr_list .)
    PROCEDURE       reduce using rule 7 (const_part -> CONST const_expr_list .)
    BEGIN           reduce using rule 7 (const_part -> CONST const_expr_list .)
    DOT             reduce using rule 7 (const_part -> CONST const_expr_list .)
    SEMI            reduce using rule 7 (const_part -> CONST const_expr_list .)
    NAME            shift and go to state 25

    const_expr                     shift and go to state 54

state 24

    (10) const_expr_list -> const_expr .

    NAME            reduce using rule 10 (const_expr_list -> const_expr .)
    TYPE            reduce using rule 10 (const_expr_list -> const_expr .)
    VAR             reduce using rule 10 (const_expr_list -> const_expr .)
    FUNCTION        reduce using rule 10 (const_expr_list -> const_expr .)
    PROCEDURE       reduce using rule 10 (const_expr_list -> const_expr .)
    BEGIN           reduce using rule 10 (const_expr_list -> const_expr .)
    DOT             reduce using rule 10 (const_expr_list -> const_expr .)
    SEMI            reduce using rule 10 (const_expr_list -> const_expr .)


state 25

    (11) const_expr -> NAME . EQUAL const_value SEMI

    EQUAL           shift and go to state 55


state 26

    (64) compound_stmt -> BEGIN stmt_list END .

    DOT             reduce using rule 64 (compound_stmt -> BEGIN stmt_list END .)
    SEMI            reduce using rule 64 (compound_stmt -> BEGIN stmt_list END .)
    ELSE            reduce using rule 64 (compound_stmt -> BEGIN stmt_list END .)


state 27

    (65) stmt_list -> stmt_list stmt . SEMI

    SEMI            shift and go to state 56


state 28

    (67) stmt -> INTEGER . COLON non_label_stmt

    COLON           shift and go to state 57


state 29

    (68) stmt -> non_label_stmt .

    SEMI            reduce using rule 68 (stmt -> non_label_stmt .)
    ELSE            reduce using rule 68 (stmt -> non_label_stmt .)


state 30

    (69) non_label_stmt -> assign_stmt .

    SEMI            reduce using rule 69 (non_label_stmt -> assign_stmt .)
    ELSE            reduce using rule 69 (non_label_stmt -> assign_stmt .)


state 31

    (70) non_label_stmt -> proc_stmt .

    SEMI            reduce using rule 70 (non_label_stmt -> proc_stmt .)
    ELSE            reduce using rule 70 (non_label_stmt -> proc_stmt .)


state 32

    (71) non_label_stmt -> compound_stmt .

    SEMI            reduce using rule 71 (non_label_stmt -> compound_stmt .)
    ELSE            reduce using rule 71 (non_label_stmt -> compound_stmt .)


state 33

    (72) non_label_stmt -> if_stmt .

    SEMI            reduce using rule 72 (non_label_stmt -> if_stmt .)
    ELSE            reduce using rule 72 (non_label_stmt -> if_stmt .)


state 34

    (73) non_label_stmt -> repeat_stmt .

    SEMI            reduce using rule 73 (non_label_stmt -> repeat_stmt .)
    ELSE            reduce using rule 73 (non_label_stmt -> repeat_stmt .)


state 35

    (74) non_label_stmt -> while_stmt .

    SEMI            reduce using rule 74 (non_label_stmt -> while_stmt .)
    ELSE            reduce using rule 74 (non_label_stmt -> while_stmt .)


state 36

    (75) non_label_stmt -> for_stmt .

    SEMI            reduce using rule 75 (non_label_stmt -> for_stmt .)
    ELSE            reduce using rule 75 (non_label_stmt -> for_stmt .)


state 37

    (76) non_label_stmt -> case_stmt .

    SEMI            reduce using rule 76 (non_label_stmt -> case_stmt .)
    ELSE            reduce using rule 76 (non_label_stmt -> case_stmt .)


state 38

    (77) non_label_stmt -> goto_stmt .

    SEMI            reduce using rule 77 (non_label_stmt -> goto_stmt .)
    ELSE            reduce using rule 77 (non_label_stmt -> goto_stmt .)


state 39

    (78) assign_stmt -> NAME . ASSIGN expression
    (79) assign_stmt -> NAME . LB expression RB ASSIGN expression
    (80) assign_stmt -> NAME . DOT NAME ASSIGN expression
    (81) proc_stmt -> NAME .
    (82) proc_stmt -> NAME . LP args_list RP

    ASSIGN          shift and go to state 58
    LB              shift and go to state 59
    DOT             shift and go to state 60
    SEMI            reduce using rule 81 (proc_stmt -> NAME .)
    ELSE            reduce using rule 81 (proc_stmt -> NAME .)
    LP              shift and go to state 61


state 40

    (83) proc_stmt -> SYS_PROC .
    (84) proc_stmt -> SYS_PROC . LP expression_list RP

    SEMI            reduce using rule 83 (proc_stmt -> SYS_PROC .)
    ELSE            reduce using rule 83 (proc_stmt -> SYS_PROC .)
    LP              shift and go to state 62


state 41

    (85) proc_stmt -> READ . LP factor RP

    LP              shift and go to state 63


state 42

    (86) if_stmt -> IF . expression THEN stmt else_clause
    (102) expression -> . expression GE expr
    (103) expression -> . expression GT expr
    (104) expression -> . expression LE expr
    (105) expression -> . expression LT expr
    (106) expression -> . expression EQUAL expr
    (107) expression -> . expression UNEQUAL expr
    (108) expression -> . expr
    (109) expr -> . expr PLUS term
    (110) expr -> . expr MINUS term
    (111) expr -> . expr OR term
    (112) expr -> . term
    (113) term -> . term MUL factor
    (114) term -> . term DIV factor
    (115) term -> . term MOD factor
    (116) term -> . term AND factor
    (117) term -> . factor
    (118) factor -> . SYS_FUNCT
    (119) factor -> . SYS_FUNCT LP args_list RP
    (120) factor -> . NAME LP args_list RP
    (121) factor -> . NAME
    (122) factor -> . const_value
    (123) factor -> . LP expression RP
    (124) factor -> . NOT factor
    (125) factor -> . MINUS factor
    (126) factor -> . NAME LB expression RB
    (127) factor -> . NAME DOT NAME
    (12) const_value -> . INTEGER
    (13) const_value -> . REAL
    (14) const_value -> . CHAR
    (15) const_value -> . STRING
    (16) const_value -> . SYS_CON
    (17) const_value -> . true
    (18) const_value -> . false

    SYS_FUNCT       shift and go to state 69
    NAME            shift and go to state 71
    LP              shift and go to state 70
    NOT             shift and go to state 73
    MINUS           shift and go to state 67
    INTEGER         shift and go to state 74
    REAL            shift and go to state 75
    CHAR            shift and go to state 76
    STRING          shift and go to state 77
    SYS_CON         shift and go to state 78
    true            shift and go to state 79
    false           shift and go to state 80

    expression                     shift and go to state 64
    expr                           shift and go to state 65
    term                           shift and go to state 66
    factor                         shift and go to state 68
    const_value                    shift and go to state 72

state 43

    (89) repeat_stmt -> REPEAT . stmt_list UNTIL expression
    (65) stmt_list -> . stmt_list stmt SEMI
    (66) stmt_list -> . empty
    (130) empty -> .

    UNTIL           reduce using rule 130 (empty -> .)
    INTEGER         reduce using rule 130 (empty -> .)
    NAME            reduce using rule 130 (empty -> .)
    SYS_PROC        reduce using rule 130 (empty -> .)
    READ            reduce using rule 130 (empty -> .)
    BEGIN           reduce using rule 130 (empty -> .)
    IF              reduce using rule 130 (empty -> .)
    REPEAT          reduce using rule 130 (empty -> .)
    WHILE           reduce using rule 130 (empty -> .)
    FOR             reduce using rule 130 (empty -> .)
    CASE            reduce using rule 130 (empty -> .)
    GOTO            reduce using rule 130 (empty -> .)

    stmt_list                      shift and go to state 81
    empty                          shift and go to state 19

state 44

    (90) while_stmt -> WHILE . expression DO stmt
    (102) expression -> . expression GE expr
    (103) expression -> . expression GT expr
    (104) expression -> . expression LE expr
    (105) expression -> . expression LT expr
    (106) expression -> . expression EQUAL expr
    (107) expression -> . expression UNEQUAL expr
    (108) expression -> . expr
    (109) expr -> . expr PLUS term
    (110) expr -> . expr MINUS term
    (111) expr -> . expr OR term
    (112) expr -> . term
    (113) term -> . term MUL factor
    (114) term -> . term DIV factor
    (115) term -> . term MOD factor
    (116) term -> . term AND factor
    (117) term -> . factor
    (118) factor -> . SYS_FUNCT
    (119) factor -> . SYS_FUNCT LP args_list RP
    (120) factor -> . NAME LP args_list RP
    (121) factor -> . NAME
    (122) factor -> . const_value
    (123) factor -> . LP expression RP
    (124) factor -> . NOT factor
    (125) factor -> . MINUS factor
    (126) factor -> . NAME LB expression RB
    (127) factor -> . NAME DOT NAME
    (12) const_value -> . INTEGER
    (13) const_value -> . REAL
    (14) const_value -> . CHAR
    (15) const_value -> . STRING
    (16) const_value -> . SYS_CON
    (17) const_value -> . true
    (18) const_value -> . false

    SYS_FUNCT       shift and go to state 69
    NAME            shift and go to state 71
    LP              shift and go to state 70
    NOT             shift and go to state 73
    MINUS           shift and go to state 67
    INTEGER         shift and go to state 74
    REAL            shift and go to state 75
    CHAR            shift and go to state 76
    STRING          shift and go to state 77
    SYS_CON         shift and go to state 78
    true            shift and go to state 79
    false           shift and go to state 80

    expression                     shift and go to state 82
    expr                           shift and go to state 65
    term                           shift and go to state 66
    factor                         shift and go to state 68
    const_value                    shift and go to state 72

state 45

    (91) for_stmt -> FOR . NAME ASSIGN expression direction expression DO stmt

    NAME            shift and go to state 83


state 46

    (94) case_stmt -> CASE . expression OF case_expr_list END
    (102) expression -> . expression GE expr
    (103) expression -> . expression GT expr
    (104) expression -> . expression LE expr
    (105) expression -> . expression LT expr
    (106) expression -> . expression EQUAL expr
    (107) expression -> . expression UNEQUAL expr
    (108) expression -> . expr
    (109) expr -> . expr PLUS term
    (110) expr -> . expr MINUS term
    (111) expr -> . expr OR term
    (112) expr -> . term
    (113) term -> . term MUL factor
    (114) term -> . term DIV factor
    (115) term -> . term MOD factor
    (116) term -> . term AND factor
    (117) term -> . factor
    (118) factor -> . SYS_FUNCT
    (119) factor -> . SYS_FUNCT LP args_list RP
    (120) factor -> . NAME LP args_list RP
    (121) factor -> . NAME
    (122) factor -> . const_value
    (123) factor -> . LP expression RP
    (124) factor -> . NOT factor
    (125) factor -> . MINUS factor
    (126) factor -> . NAME LB expression RB
    (127) factor -> . NAME DOT NAME
    (12) const_value -> . INTEGER
    (13) const_value -> . REAL
    (14) const_value -> . CHAR
    (15) const_value -> . STRING
    (16) const_value -> . SYS_CON
    (17) const_value -> . true
    (18) const_value -> . false

    SYS_FUNCT       shift and go to state 69
    NAME            shift and go to state 71
    LP              shift and go to state 70
    NOT             shift and go to state 73
    MINUS           shift and go to state 67
    INTEGER         shift and go to state 74
    REAL            shift and go to state 75
    CHAR            shift and go to state 76
    STRING          shift and go to state 77
    SYS_CON         shift and go to state 78
    true            shift and go to state 79
    false           shift and go to state 80

    expression                     shift and go to state 84
    expr                           shift and go to state 65
    term                           shift and go to state 66
    factor                         shift and go to state 68
    const_value                    shift and go to state 72

state 47

    (99) goto_stmt -> GOTO . INTEGER

    INTEGER         shift and go to state 85


state 48

    (5) routine_head -> label_part const_part type_part var_part . routine_part
    (43) routine_part -> . routine_part function_decl
    (44) routine_part -> . routine_part procedure_decl
    (45) routine_part -> . function_decl
    (46) routine_part -> . procedure_decl
    (47) routine_part -> . empty
    (48) function_decl -> . function_head SEMI sub_routine SEMI
    (51) procedure_decl -> . procedure_head SEMI sub_routine SEMI
    (130) empty -> .
    (49) function_head -> . FUNCTION function_name parameters COLON simple_type_decl
    (52) procedure_head -> . PROCEDURE procedure_name parameters

  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for PROCEDURE resolved as shift
    BEGIN           reduce using rule 130 (empty -> .)
    DOT             reduce using rule 130 (empty -> .)
    SEMI            reduce using rule 130 (empty -> .)
    FUNCTION        shift and go to state 92
    PROCEDURE       shift and go to state 93

  ! FUNCTION        [ reduce using rule 130 (empty -> .) ]
  ! PROCEDURE       [ reduce using rule 130 (empty -> .) ]

    routine_part                   shift and go to state 86
    function_decl                  shift and go to state 87
    procedure_decl                 shift and go to state 88
    empty                          shift and go to state 89
    function_head                  shift and go to state 90
    procedure_head                 shift and go to state 91

state 49
